:sparkles: Height and overflow fix

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap');
 
-body::-webkit-scrollbar {
+.thin-scroll-bar::-webkit-scrollbar {
   width: 5px;
 }
 
-body::-webkit-scrollbar-thumb {
+.thin-scroll-bar::-webkit-scrollbar-thumb {
   background-color: var(--chakra-colors-orange-300);
 }
 
